# baelyks-bar

./: Cargo.toml  flake.nix
src/: battery.rs  freedesktop.rs  iced.rs  main.rs  sway.rs  system.rs  tray.rs  volume.rs
